syntax = "proto3";
package profilepb;
option go_package = "api/pb";

import "messages_profile.proto";

// Profile

message CreateProfileResponse {
    Profile profile = 1; 
}

message GetProfileResponse {
    Profile profile = 1; 
    repeated Avatar avatars = 2;
}  

message UpdateProfileResponse {}

message DeleteProfileResponse {}

// Profile Avatar

message AddProfileAvatarResponse {
    Avatar avatar = 1;
}

message DeleteProfileAvatarResponse {}

message ChangeProfileAvatarResponse {}