syntax = "proto3";
package profilepb;
option go_package = "api/pb";

import "request_profile.proto";
import "response_profile.proto";


service ProfileService {
    // Create a new profile.
    rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);

    // Get a profile by its ID.
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

    // Delete a profile by its ID.
    rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);

    // Update a profile informtation by its ID.
    // Updating only received fields.
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);

    // Set a profile's avatar.
    rpc AddProfileAvatar(AddProfileAvatarRequest) returns (AddProfileAvatarResponse);

    // Delete a profile's avatar by ID.
    rpc DeleteProfileAvatar(DeleteProfileAvatarRequest) returns (DeleteProfileAvatarResponse);
}

